Stabilizing 2Pack - small enhancements and bug fixing